Parser.output
   0  $accept : %entry% $end

   1  Prog : FunDecs EOF

   2  FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs
   3          |

   4  Type : INT
   5       | CHAR

   6  Decs : Decs1 Dec
   7       |

   8  Decs1 : Decs1 Dec SEMICOLON
   9        |

  10  Dec : Type Sids

  11  Sid : ID
  12      | DEREF ID

  13  Sids : Sid COMMA Sids
  14       | Sid

  15  Stat : LBRACE Decs1 Stats RBRACE
  16       | Exp SEMICOLON
  17       | IF LPAR Exp RPAR Stat
  18       | IF LPAR Exp RPAR Stat ELSE Stat
  19       | WHILE LPAR Exp RPAR Stat
  20       | RETURN Exp SEMICOLON
  21       | THROW Exp SEMICOLON
  22       | TRY Stats CATCH ID COLON Stat

  23  Stats : Stat Stats
  24        |

  25  Exp : NUM
  26      | CHARCONST
  27      | STRINGCONST
  28      | Lval
  29      | Lval ASSIGN Exp
  30      | Exp PLUS Exp
  31      | Exp MINUS Exp
  32      | Exp LESS Exp
  33      | Exp EQUAL Exp
  34      | ID LPAR Exps RPAR
  35      | LPAR Exp RPAR

  36  Exps :
  37       | Exps1

  38  Exps1 : Exp
  39        | Exp COMMA Exps

  40  Lval : ID
  41       | ID DEREF
  42       | ID LBRACK Exp RBRACK

  43  %entry% : '\001' Prog

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . Prog  (43)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	Prog  goto 5
	FunDecs  goto 6
	Type  goto 7


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	Type : CHAR .  (5)

	.  reduce 5


state 4
	Type : INT .  (4)

	.  reduce 4


state 5
	%entry% : '\001' Prog .  (43)

	.  reduce 43


state 6
	Prog : FunDecs . EOF  (1)

	EOF  shift 8
	.  error


state 7
	FunDecs : Type . Sid LPAR Decs RPAR Stat FunDecs  (2)

	DEREF  shift 9
	ID  shift 10
	.  error

	Sid  goto 11


state 8
	Prog : FunDecs EOF .  (1)

	.  reduce 1


state 9
	Sid : DEREF . ID  (12)

	ID  shift 12
	.  error


state 10
	Sid : ID .  (11)

	.  reduce 11


state 11
	FunDecs : Type Sid . LPAR Decs RPAR Stat FunDecs  (2)

	LPAR  shift 13
	.  error


state 12
	Sid : DEREF ID .  (12)

	.  reduce 12


state 13
	FunDecs : Type Sid LPAR . Decs RPAR Stat FunDecs  (2)
	Decs : .  (7)
	Decs1 : .  (9)

	CHAR  reduce 9
	INT  reduce 9
	RPAR  reduce 7

	Decs  goto 14
	Decs1  goto 15


state 14
	FunDecs : Type Sid LPAR Decs . RPAR Stat FunDecs  (2)

	RPAR  shift 16
	.  error


state 15
	Decs : Decs1 . Dec  (6)
	Decs1 : Decs1 . Dec SEMICOLON  (8)

	CHAR  shift 3
	INT  shift 4
	.  error

	Type  goto 17
	Dec  goto 18


state 16
	FunDecs : Type Sid LPAR Decs RPAR . Stat FunDecs  (2)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	.  error

	Exp  goto 30
	Lval  goto 31
	Stat  goto 32


state 17
	Dec : Type . Sids  (10)

	DEREF  shift 9
	ID  shift 10
	.  error

	Sid  goto 33
	Sids  goto 34


state 18
	Decs : Decs1 Dec .  (6)
	Decs1 : Decs1 Dec . SEMICOLON  (8)

	SEMICOLON  shift 35
	RPAR  reduce 6


state 19
	Exp : CHARCONST .  (26)

	.  reduce 26


state 20
	Exp : ID . LPAR Exps RPAR  (34)
	Lval : ID .  (40)
	Lval : ID . DEREF  (41)
	Lval : ID . LBRACK Exp RBRACK  (42)

	DEREF  shift 36
	LBRACK  shift 37
	LPAR  shift 38
	ASSIGN  reduce 40
	COMMA  reduce 40
	EQUAL  reduce 40
	LESS  reduce 40
	MINUS  reduce 40
	PLUS  reduce 40
	RBRACK  reduce 40
	RPAR  reduce 40
	SEMICOLON  reduce 40


state 21
	Stat : IF . LPAR Exp RPAR Stat  (17)
	Stat : IF . LPAR Exp RPAR Stat ELSE Stat  (18)

	LPAR  shift 39
	.  error


state 22
	Stat : LBRACE . Decs1 Stats RBRACE  (15)
	Decs1 : .  (9)

	.  reduce 9

	Decs1  goto 40


state 23
	Exp : LPAR . Exp RPAR  (35)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 41
	Lval  goto 31


state 24
	Exp : NUM .  (25)

	.  reduce 25


state 25
	Stat : RETURN . Exp SEMICOLON  (20)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 42
	Lval  goto 31


state 26
	Exp : STRINGCONST .  (27)

	.  reduce 27


state 27
	Stat : THROW . Exp SEMICOLON  (21)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 43
	Lval  goto 31


state 28
	Stat : TRY . Stats CATCH ID COLON Stat  (22)
	Stats : .  (24)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	CATCH  reduce 24

	Exp  goto 30
	Lval  goto 31
	Stat  goto 44
	Stats  goto 45


state 29
	Stat : WHILE . LPAR Exp RPAR Stat  (19)

	LPAR  shift 46
	.  error


state 30
	Stat : Exp . SEMICOLON  (16)
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	SEMICOLON  shift 51
	.  error


state 31
	Exp : Lval .  (28)
	Exp : Lval . ASSIGN Exp  (29)

	ASSIGN  shift 52
	COMMA  reduce 28
	EQUAL  reduce 28
	LESS  reduce 28
	MINUS  reduce 28
	PLUS  reduce 28
	RBRACK  reduce 28
	RPAR  reduce 28
	SEMICOLON  reduce 28


state 32
	FunDecs : Type Sid LPAR Decs RPAR Stat . FunDecs  (2)
	FunDecs : .  (3)

	CHAR  shift 3
	INT  shift 4
	EOF  reduce 3

	FunDecs  goto 53
	Type  goto 7


state 33
	Sids : Sid . COMMA Sids  (13)
	Sids : Sid .  (14)

	COMMA  shift 54
	RPAR  reduce 14
	SEMICOLON  reduce 14


state 34
	Dec : Type Sids .  (10)

	.  reduce 10


state 35
	Decs1 : Decs1 Dec SEMICOLON .  (8)

	.  reduce 8


state 36
	Lval : ID DEREF .  (41)

	.  reduce 41


state 37
	Lval : ID LBRACK . Exp RBRACK  (42)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 55
	Lval  goto 31


state 38
	Exp : ID LPAR . Exps RPAR  (34)
	Exps : .  (36)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	RPAR  reduce 36

	Exp  goto 56
	Exps  goto 57
	Exps1  goto 58
	Lval  goto 31


state 39
	Stat : IF LPAR . Exp RPAR Stat  (17)
	Stat : IF LPAR . Exp RPAR Stat ELSE Stat  (18)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 59
	Lval  goto 31


state 40
	Decs1 : Decs1 . Dec SEMICOLON  (8)
	Stat : LBRACE Decs1 . Stats RBRACE  (15)
	Stats : .  (24)

	CHAR  shift 3
	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	INT  shift 4
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	RBRACE  reduce 24

	Type  goto 17
	Dec  goto 60
	Exp  goto 30
	Lval  goto 31
	Stat  goto 44
	Stats  goto 61


state 41
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)
	Exp : LPAR Exp . RPAR  (35)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	RPAR  shift 62
	.  error


state 42
	Stat : RETURN Exp . SEMICOLON  (20)
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	SEMICOLON  shift 63
	.  error


state 43
	Stat : THROW Exp . SEMICOLON  (21)
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	SEMICOLON  shift 64
	.  error


state 44
	Stats : Stat . Stats  (23)
	Stats : .  (24)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	CATCH  reduce 24
	RBRACE  reduce 24

	Exp  goto 30
	Lval  goto 31
	Stat  goto 44
	Stats  goto 65


state 45
	Stat : TRY Stats . CATCH ID COLON Stat  (22)

	CATCH  shift 66
	.  error


state 46
	Stat : WHILE LPAR . Exp RPAR Stat  (19)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 67
	Lval  goto 31


state 47
	Exp : Exp EQUAL . Exp  (33)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 68
	Lval  goto 31


state 48
	Exp : Exp LESS . Exp  (32)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 69
	Lval  goto 31


state 49
	Exp : Exp MINUS . Exp  (31)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 70
	Lval  goto 31


state 50
	Exp : Exp PLUS . Exp  (30)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 71
	Lval  goto 31


state 51
	Stat : Exp SEMICOLON .  (16)

	.  reduce 16


state 52
	Exp : Lval ASSIGN . Exp  (29)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	.  error

	Exp  goto 72
	Lval  goto 31


state 53
	FunDecs : Type Sid LPAR Decs RPAR Stat FunDecs .  (2)

	.  reduce 2


state 54
	Sids : Sid COMMA . Sids  (13)

	DEREF  shift 9
	ID  shift 10
	.  error

	Sid  goto 33
	Sids  goto 73


state 55
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)
	Lval : ID LBRACK Exp . RBRACK  (42)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	RBRACK  shift 74
	.  error


state 56
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)
	Exps1 : Exp .  (38)
	Exps1 : Exp . COMMA Exps  (39)

	COMMA  shift 75
	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	RPAR  reduce 38


state 57
	Exp : ID LPAR Exps . RPAR  (34)

	RPAR  shift 76
	.  error


state 58
	Exps : Exps1 .  (37)

	.  reduce 37


state 59
	Stat : IF LPAR Exp . RPAR Stat  (17)
	Stat : IF LPAR Exp . RPAR Stat ELSE Stat  (18)
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	RPAR  shift 77
	.  error


state 60
	Decs1 : Decs1 Dec . SEMICOLON  (8)

	SEMICOLON  shift 35
	.  error


state 61
	Stat : LBRACE Decs1 Stats . RBRACE  (15)

	RBRACE  shift 78
	.  error


state 62
	Exp : LPAR Exp RPAR .  (35)

	.  reduce 35


state 63
	Stat : RETURN Exp SEMICOLON .  (20)

	.  reduce 20


state 64
	Stat : THROW Exp SEMICOLON .  (21)

	.  reduce 21


state 65
	Stats : Stat Stats .  (23)

	.  reduce 23


state 66
	Stat : TRY Stats CATCH . ID COLON Stat  (22)

	ID  shift 79
	.  error


state 67
	Stat : WHILE LPAR Exp . RPAR Stat  (19)
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	RPAR  shift 80
	.  error


state 68
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)
	Exp : Exp EQUAL Exp .  (33)

	MINUS  shift 49
	PLUS  shift 50
	COMMA  reduce 33
	EQUAL  reduce 33
	LESS  reduce 33
	RBRACK  reduce 33
	RPAR  reduce 33
	SEMICOLON  reduce 33


state 69
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp LESS Exp .  (32)
	Exp : Exp . EQUAL Exp  (33)

	MINUS  shift 49
	PLUS  shift 50
	COMMA  reduce 32
	EQUAL  reduce 32
	LESS  reduce 32
	RBRACK  reduce 32
	RPAR  reduce 32
	SEMICOLON  reduce 32


state 70
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp MINUS Exp .  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	COMMA  reduce 31
	EQUAL  reduce 31
	LESS  reduce 31
	MINUS  reduce 31
	PLUS  reduce 31
	RBRACK  reduce 31
	RPAR  reduce 31
	SEMICOLON  reduce 31


state 71
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp PLUS Exp .  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	COMMA  reduce 30
	EQUAL  reduce 30
	LESS  reduce 30
	MINUS  reduce 30
	PLUS  reduce 30
	RBRACK  reduce 30
	RPAR  reduce 30
	SEMICOLON  reduce 30


state 72
	Exp : Lval ASSIGN Exp .  (29)
	Exp : Exp . PLUS Exp  (30)
	Exp : Exp . MINUS Exp  (31)
	Exp : Exp . LESS Exp  (32)
	Exp : Exp . EQUAL Exp  (33)

	EQUAL  shift 47
	LESS  shift 48
	MINUS  shift 49
	PLUS  shift 50
	COMMA  reduce 29
	RBRACK  reduce 29
	RPAR  reduce 29
	SEMICOLON  reduce 29


state 73
	Sids : Sid COMMA Sids .  (13)

	.  reduce 13


state 74
	Lval : ID LBRACK Exp RBRACK .  (42)

	.  reduce 42


state 75
	Exps1 : Exp COMMA . Exps  (39)
	Exps : .  (36)

	CHARCONST  shift 19
	ID  shift 20
	LPAR  shift 23
	NUM  shift 24
	STRINGCONST  shift 26
	RPAR  reduce 36

	Exp  goto 56
	Exps  goto 81
	Exps1  goto 58
	Lval  goto 31


state 76
	Exp : ID LPAR Exps RPAR .  (34)

	.  reduce 34


state 77
	Stat : IF LPAR Exp RPAR . Stat  (17)
	Stat : IF LPAR Exp RPAR . Stat ELSE Stat  (18)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	.  error

	Exp  goto 30
	Lval  goto 31
	Stat  goto 82


state 78
	Stat : LBRACE Decs1 Stats RBRACE .  (15)

	.  reduce 15


state 79
	Stat : TRY Stats CATCH ID . COLON Stat  (22)

	COLON  shift 83
	.  error


state 80
	Stat : WHILE LPAR Exp RPAR . Stat  (19)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	.  error

	Exp  goto 30
	Lval  goto 31
	Stat  goto 84


state 81
	Exps1 : Exp COMMA Exps .  (39)

	.  reduce 39


state 82
	Stat : IF LPAR Exp RPAR Stat .  (17)
	Stat : IF LPAR Exp RPAR Stat . ELSE Stat  (18)

	ELSE  shift 85
	CATCH  reduce 17
	CHAR  reduce 17
	CHARCONST  reduce 17
	EOF  reduce 17
	ID  reduce 17
	IF  reduce 17
	INT  reduce 17
	LBRACE  reduce 17
	LPAR  reduce 17
	NUM  reduce 17
	RBRACE  reduce 17
	RETURN  reduce 17
	STRINGCONST  reduce 17
	THROW  reduce 17
	TRY  reduce 17
	WHILE  reduce 17


state 83
	Stat : TRY Stats CATCH ID COLON . Stat  (22)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	.  error

	Exp  goto 30
	Lval  goto 31
	Stat  goto 86


state 84
	Stat : WHILE LPAR Exp RPAR Stat .  (19)

	.  reduce 19


state 85
	Stat : IF LPAR Exp RPAR Stat ELSE . Stat  (18)

	CHARCONST  shift 19
	ID  shift 20
	IF  shift 21
	LBRACE  shift 22
	LPAR  shift 23
	NUM  shift 24
	RETURN  shift 25
	STRINGCONST  shift 26
	THROW  shift 27
	TRY  shift 28
	WHILE  shift 29
	.  error

	Exp  goto 30
	Lval  goto 31
	Stat  goto 87


state 86
	Stat : TRY Stats CATCH ID COLON Stat .  (22)

	.  reduce 22


state 87
	Stat : IF LPAR Exp RPAR Stat ELSE Stat .  (18)

	.  reduce 18


32 terminals, 16 nonterminals
44 grammar rules, 88 states
